--- a/LucasVanBerkel-pset3/app/src/main/AndroidManifest.xml
+++ b/LucasVanBerkel-pset3/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lucas.lucasvanberkel_pset3">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".searchList" />
-        <activity android:name=".IndividualScreen"></activity>
+        <activity android:name=".IndividualScreen" />
     </application>
 
 </manifest>
